--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -1409,6 +1409,157 @@
     "print(\"Linked List after Removing Duplicates:\")\n",
     "print_LL(ans)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Linked List:\n",
+      "1-->2-->3-->\n",
+      "Reversed Linked List :\n",
+      "3-->2-->1-->\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Reverse a linked list\n",
+    "\n",
+    "class LL:\n",
+    "    def __init__(self, data):\n",
+    "        self.d = data\n",
+    "        self.next = None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while temp is not None:\n",
+    "        print(temp.d, end=\"-->\")\n",
+    "        temp = temp.next\n",
+    "    print()\n",
+    "\n",
+    "def reverse_elements(head):\n",
+    "    if head is None or head.next is None:\n",
+    "        return head  \n",
+    "\n",
+    "    new_head = reverse_elements(head.next) \n",
+    "\n",
+    "    head.next.next = head \n",
+    "    head.next = None \n",
+    "    return new_head \n",
+    "\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value: \"))\n",
+    "    head = None\n",
+    "    while v != -1:\n",
+    "        if head is None:\n",
+    "            head = LL(v)\n",
+    "        else:\n",
+    "            temp = head\n",
+    "            while temp.next is not None:\n",
+    "                temp = temp.next\n",
+    "            temp.next = LL(v)\n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "\n",
+    "# Example Test\n",
+    "newHead = take_ip()\n",
+    "print(\"Original Linked List:\")\n",
+    "print_LL(newHead)\n",
+    "ans = reverse_elements(newHead)\n",
+    "print(\"Reversed Linked List :\")\n",
+    "print_LL(ans)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Linked List:\n",
+      "1-->2-->3-->4-->\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'bool' object has no attribute 'd'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 48\u001b[0m\n\u001b[0;32m     46\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOriginal Linked List:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     47\u001b[0m print_LL(newHead)\n\u001b[1;32m---> 48\u001b[0m ans \u001b[38;5;241m=\u001b[39m \u001b[43mis_palindrome\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnewHead\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     49\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mReversed Linked List :\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     50\u001b[0m print_LL(ans)\n",
+      "Cell \u001b[1;32mIn[4], line 19\u001b[0m, in \u001b[0;36mis_palindrome\u001b[1;34m(head)\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m temp \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m temp\u001b[38;5;241m.\u001b[39mnext \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m head  \n\u001b[1;32m---> 19\u001b[0m new_head \u001b[38;5;241m=\u001b[39m \u001b[43mis_palindrome\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtemp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnext\u001b[49m\u001b[43m)\u001b[49m \n\u001b[0;32m     21\u001b[0m temp\u001b[38;5;241m.\u001b[39mnext\u001b[38;5;241m.\u001b[39mnext \u001b[38;5;241m=\u001b[39m temp \n\u001b[0;32m     22\u001b[0m temp\u001b[38;5;241m.\u001b[39mnext \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \n",
+      "Cell \u001b[1;32mIn[4], line 24\u001b[0m, in \u001b[0;36mis_palindrome\u001b[1;34m(head)\u001b[0m\n\u001b[0;32m     22\u001b[0m temp\u001b[38;5;241m.\u001b[39mnext \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m temp\u001b[38;5;241m!=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m new_head\u001b[38;5;241m!=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m---> 24\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m temp\u001b[38;5;241m.\u001b[39md \u001b[38;5;241m!=\u001b[39m \u001b[43mnew_head\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43md\u001b[49m:\n\u001b[0;32m     25\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m     26\u001b[0m     temp\u001b[38;5;241m=\u001b[39mtemp\u001b[38;5;241m.\u001b[39mnext\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'bool' object has no attribute 'd'"
+     ]
+    }
+   ],
+   "source": [
+    "# Palindrome Linked List\n",
+    "class LL:\n",
+    "    def __init__(self, data):\n",
+    "        self.d = data\n",
+    "        self.next = None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while temp is not None:\n",
+    "        print(temp.d, end=\"-->\")\n",
+    "        temp = temp.next\n",
+    "    print()\n",
+    "\n",
+    "def is_palindrome(head):\n",
+    "    temp = head\n",
+    "    if temp is None or temp.next is None:\n",
+    "        return head  \n",
+    "\n",
+    "    new_head = is_palindrome(temp.next) \n",
+    "\n",
+    "    temp.next.next = temp \n",
+    "    temp.next = None \n",
+    "    while temp!=None and new_head!=None:\n",
+    "        if temp.d != new_head.d:\n",
+    "            return False\n",
+    "        temp=temp.next\n",
+    "        new_head = new_head.next\n",
+    "    return True \n",
+    "\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value: \"))\n",
+    "    head = None\n",
+    "    while v != -1:\n",
+    "        if head is None:\n",
+    "            head = LL(v)\n",
+    "        else:\n",
+    "            temp = head\n",
+    "            while temp.next is not None:\n",
+    "                temp = temp.next\n",
+    "            temp.next = LL(v)\n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "\n",
+    "# Example Test\n",
+    "newHead = take_ip()\n",
+    "print(\"Original Linked List:\")\n",
+    "print_LL(newHead)\n",
+    "ans = is_palindrome(newHead)\n",
+    "print(\"Reversed Linked List :\")\n",
+    "print_LL(ans)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
