--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -1797,6 +1797,92 @@
     "    \n",
     "    return False"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Linked List:\n",
+      "1-->2-->3-->4-->5-->\n",
+      "5\n",
+      "3\n",
+      "i= 1\n",
+      "i= 2\n",
+      "i= 3\n",
+      "1-->2-->3-->5-->\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Remove nth node from linked list\n",
+    "\n",
+    "class LL:\n",
+    "    def __init__(self, data):\n",
+    "        self.d = data\n",
+    "        self.next = None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while temp is not None:\n",
+    "        print(temp.d, end=\"-->\")\n",
+    "        temp = temp.next\n",
+    "    print()\n",
+    "\n",
+    "def remove_nth_node_from_end(head, n):\n",
+    "    if not head:\n",
+    "        return None\n",
+    "    def get_length(head):\n",
+    "        length = 0\n",
+    "        temp = head\n",
+    "        while temp is not None:\n",
+    "            length += 1\n",
+    "            temp = temp.next\n",
+    "        return length\n",
+    "    get_ll_length = get_length(head)\n",
+    "    removable_node = get_ll_length - n\n",
+    "    if removable_node == 0:\n",
+    "        return head.next  \n",
+    "    temp = head\n",
+    "    for i in range(1, get_ll_length):\n",
+    "        print(\"i=\", i)\n",
+    "        if i == removable_node:\n",
+    "            temp.next = temp.next.next\n",
+    "            break\n",
+    "        temp = temp.next\n",
+    "    return head \n",
+    "\n",
+    "\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value: \"))\n",
+    "    head = None\n",
+    "    while v != -1:\n",
+    "        if head is None:\n",
+    "            head = LL(v)\n",
+    "        else:\n",
+    "            temp = head\n",
+    "            while temp.next is not None:\n",
+    "                temp = temp.next\n",
+    "            temp.next = LL(v)\n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "newHead = take_ip()\n",
+    "print(\"Original Linked List:\")\n",
+    "print_LL(newHead)\n",
+    "ans = remove_nth_node_from_end(newHead,2)\n",
+    "print_LL(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
