--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -1636,6 +1636,97 @@
     "    \n",
     "    return False "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Linked List:\n",
+      "1-->5-->4-->7-->3-->\n",
+      "1-->3-->4-->5-->7-->\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Merge sort on linked list\n",
+    "\n",
+    "class LL:\n",
+    "    def __init__(self, data):\n",
+    "        self.d = data\n",
+    "        self.next = None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while temp is not None:\n",
+    "        print(temp.d, end=\"-->\")\n",
+    "        temp = temp.next\n",
+    "    print()\n",
+    "\n",
+    "def get_middle(head):\n",
+    "    slow, fast = head, head\n",
+    "    prev = None\n",
+    "    while fast and fast.next:\n",
+    "        prev = slow\n",
+    "        slow = slow.next\n",
+    "        fast = fast.next.next\n",
+    "    if prev:\n",
+    "        prev.next = None \n",
+    "    return slow\n",
+    "\n",
+    "def merge(left, right):\n",
+    "    dummy = LL(0) \n",
+    "    tail = dummy\n",
+    "    while left and right:\n",
+    "        if left.d < right.d:\n",
+    "            tail.next = left\n",
+    "            left = left.next\n",
+    "        else:\n",
+    "            tail.next = right\n",
+    "            right = right.next\n",
+    "        tail = tail.next\n",
+    "    tail.next = left if left else right\n",
+    "    return dummy.next\n",
+    "def merge_sort(head):\n",
+    "    if not head or not head.next:\n",
+    "        return head \n",
+    "\n",
+    "    mid = get_middle(head)\n",
+    "    left = merge_sort(head)  \n",
+    "    right = merge_sort(mid)  \n",
+    "\n",
+    "    return merge(left, right)\n",
+    "\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value: \"))\n",
+    "    head = None\n",
+    "    while v != -1:\n",
+    "        if head is None:\n",
+    "            head = LL(v)\n",
+    "        else:\n",
+    "            temp = head\n",
+    "            while temp.next is not None:\n",
+    "                temp = temp.next\n",
+    "            temp.next = LL(v)\n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "newHead = take_ip()\n",
+    "print(\"Original Linked List:\")\n",
+    "print_LL(newHead)\n",
+    "ans = merge_sort(newHead)\n",
+    "print_LL(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
