--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -1777,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1791,9 +1791,6 @@
    ],
    "source": [
     "## Doubly linked list\n",
-    "\n",
-    "## Merge sort on linked list\n",
-    "\n",
     "class DLL:\n",
     "    def __init__(self, data):\n",
     "        self.d = data\n",
@@ -2081,6 +2078,191 @@
     "index = int(input(\"Enter index to insert\"))\n",
     "newHead1 = insert_at_index(newHead,index)\n",
     "print_LL(newHead1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Linked List:\n",
+      "1-->2-->3-->4-->5-->\n",
+      "2-->3-->4-->5-->\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Doubly linked list -- Delete head node\n",
+    "class DLL:\n",
+    "    def __init__(self, data):\n",
+    "        self.d = data\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while temp is not None:\n",
+    "        print(temp.d, end=\"-->\")\n",
+    "        temp = temp.next\n",
+    "    print()\n",
+    "def delete_at_head(head):\n",
+    "    tail = head\n",
+    "    tail = tail.next\n",
+    "    tail.prev = None\n",
+    "    return tail\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value: \"))\n",
+    "    head = None\n",
+    "    while v != -1:\n",
+    "        if head is None:\n",
+    "            head = DLL(v)\n",
+    "        else:\n",
+    "            temp = head\n",
+    "            while temp.next is not None:\n",
+    "                temp = temp.next\n",
+    "            newNode = DLL(v)\n",
+    "            temp.next = newNode\n",
+    "            newNode.prev = temp\n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "newHead = take_ip()\n",
+    "print(\"Original Linked List:\")\n",
+    "print_LL(newHead)\n",
+    "ans = delete_at_head(newHead)\n",
+    "print_LL(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Linked List:\n",
+      "1-->2-->3-->4-->\n",
+      "1-->2-->3-->\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Doubly linked list -- Delete tail node\n",
+    "class DLL:\n",
+    "    def __init__(self, data):\n",
+    "        self.d = data\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while temp is not None:\n",
+    "        print(temp.d, end=\"-->\")\n",
+    "        temp = temp.next\n",
+    "    print()\n",
+    "def delete_at_tail(head):\n",
+    "    tail = head\n",
+    "    while tail.next.next is not None:\n",
+    "        tail=tail.next\n",
+    "    tail.next=None\n",
+    "    return head\n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value: \"))\n",
+    "    head = None\n",
+    "    while v != -1:\n",
+    "        if head is None:\n",
+    "            head = DLL(v)\n",
+    "        else:\n",
+    "            temp = head\n",
+    "            while temp.next is not None:\n",
+    "                temp = temp.next\n",
+    "            newNode = DLL(v)\n",
+    "            temp.next = newNode\n",
+    "            newNode.prev = temp\n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "newHead = take_ip()\n",
+    "print(\"Original Linked List:\")\n",
+    "print_LL(newHead)\n",
+    "ans = delete_at_tail(newHead)\n",
+    "print_LL(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Linked List:\n",
+      "1<-->2<-->3<-->4<-->5<-->\n",
+      "1<-->3<-->4<-->5<-->\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Doubly linked list -- Delete at certain index\n",
+    "class DLL:\n",
+    "    def __init__(self, data):\n",
+    "        self.d = data\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "\n",
+    "def print_LL(head):\n",
+    "    temp = head\n",
+    "    while temp is not None:\n",
+    "        print(temp.d, end=\"<-->\")\n",
+    "        temp = temp.next\n",
+    "    print()\n",
+    "def delete_at_index(head):\n",
+    "    if head is None: \n",
+    "        return None\n",
+    "    tail = head\n",
+    "    index = int(input(\"Enter the index to delete: \"))\n",
+    "    count = 0\n",
+    "    tail1 = head\n",
+    "    while tail1 is not None:\n",
+    "        count += 1\n",
+    "        tail1 = tail1.next\n",
+    "    if index >= count: \n",
+    "        return head\n",
+    "    elif index == 0:\n",
+    "        return head.next\n",
+    "    else:\n",
+    "        for i in range(index - 1): \n",
+    "            tail = tail.next\n",
+    "\n",
+    "        if tail.next is not None:\n",
+    "            tail.next = tail.next.next \n",
+    "    return head \n",
+    "def take_ip():\n",
+    "    v = int(input(\"Enter a value: \"))\n",
+    "    head = None\n",
+    "    while v != -1:\n",
+    "        if head is None:\n",
+    "            head = DLL(v)\n",
+    "        else:\n",
+    "            temp = head\n",
+    "            while temp.next is not None:\n",
+    "                temp = temp.next\n",
+    "            newNode = DLL(v)\n",
+    "            temp.next = newNode\n",
+    "            newNode.prev = temp\n",
+    "        v = int(input())\n",
+    "    return head\n",
+    "newHead = take_ip()\n",
+    "print(\"Original Linked List:\")\n",
+    "print_LL(newHead)\n",
+    "ans = delete_at_index(newHead)\n",
+    "print_LL(ans)"
    ]
   },
   {
